--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "home": "https://ramajeyam-mediwave.github.io/git_pages/",
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://ramajeyam-mediwave.github.io/git_pages/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
